@@ -16,6 +16,7 @@
 - Fix: [#13473] Guests complain that the default Circus price is too high.
 - Fix: [#15293] TTF fonts don’t format correctly with OpenGL.
 - Fix: [#16453] Tile inspector invisibility shortcut does not use a game action.
+- Fix: [#16926] When multiple vehicles are grouped in research, only one of them is unlocked.
 - Fix: [#17774] Misplaced/missing land and construction rights tiles in RCT1 & RCT2 scenarios.
 - Fix: [#18199] Dots in the game save's name no longer get truncated.
 - Fix: [#19722] “Forbid tree removal” restriction doesn't forbid removal of large scenery tree items.
